- using correct variable to get DNS right - present versus latest results in big difference in speed - nginx user for RHEL

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,4 +1,4 @@
-user www-data;
+user nginx;
 worker_processes 4;
 pid /run/nginx.pid;
 
@@ -7,7 +7,6 @@ events {
 }
 
 http {
-
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -23,5 +22,4 @@ http {
     gzip_disable "msie6";
 
     include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
 }
